css/home/style.css
.container{
    width: 80vw;
    aspect-ratio: 1/2;
    position: absolute;
    top: 10vh;
    /* border: 2px solid black; */
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    gap: 10px;
}

.bx{
    border: 2px solid grey;
    border-radius: 1rem;
    height: 65%;
    aspect-ratio: 1;
    font-family: Georgia, 'Times New Roman', Times, serif;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: flex-end;
}

#bx1{
    background: url(../../assets/QRG.png) no-repeat center;
    background-size: 250px;
}

#bx2{
    background: url(../../Assets/QRR.png) no-repeat center;
    background-size: 250px;
}

.btn{
    height: 50px;
    width: 18ch;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 2px solid wheat;
    border-radius: 1.25rem;
    font-size: large;
    color: rgb(225, 225, 225);
    transform: scale(0.75);
}

#btn1{
    background: rgba(0, 221, 255, 0.25);
}

#btn2{
    background: rgba(255, 0, 191, 0.25);
}

.btn:hover{
    transform: scale(0.9);
    color: white;
}

@media only screen and (min-width: 321px){
    .container{
        aspect-ratio: 1/1.75;
    }
    #bx1,#bx2{
        background-size: 275px;
    }
}

@media only screen and (min-width: 376px){
    .container{
        aspect-ratio: 1/1.5;
    }
}

@media only screen and (min-width: 426px){
    .container{
        width: 90vw;
        aspect-ratio: 1/.9;
        flex-direction: row;
        gap: 25px;
        top: 8vh;
    }
    .bx{
        height: 50%;
    }
    #bx1,#bx2{
        background-size: 325px;
        border: 5px solid grey;
    }
    .btn{
        border-color: rgb(225, 225, 225);
        position: absolute;
        top: 80%;
        transform: scale(1);
    }
    .btn:hover{
        transform: scale(1.15);
    }
}

@media only screen and (min-width: 769px){
    .container{
        width: 80vw;
        aspect-ratio: 1/.75;
        top: 0vh;
    }
}

@media only screen and (min-width: 1025px){
    .container{
        top: -10vh;
    }
    #bx1,#bx2{
        background-size: 460px;
    }
}

